--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -3,7 +3,7 @@
 html {scroll-behavior: smooth;}
 body, button, input, select, textarea {@include font-init;}
 body *, body *::before, body *::after {box-sizing: border-box;}
-body {@include scrollbar-style(8);}
+body {@include scrollbar-style(8);word-break: keep-all;}
 a, img, small {display: inline-block;}
 a {color: inherit;text-decoration: none;}
 img {vertical-align: top;}
