--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -11,5 +11,5 @@ input[type="text"], input[type="password"] {cursor: text;}
 b, strong {font-weight: $font-bold;}
 ::selection {background: $primary;color: $white;}
 
-#wrap {min-width: calc($inner-width + $inner-gutter * 2);background: $bg-beige;}
-#container {min-height: calc(100vh - $header-height - $footer-height);padding-bottom: 100px;}
+#wrap {min-width: calc($inner-width + $inner-gutter * 2);}
+#container {padding: 50px 0;}
