--- a/src/style/layout/_common.scss
+++ b/src/style/layout/_common.scss
@@ -1,3 +1,3 @@
 @charset "utf-8";
 
-.common-inner {width: calc($inner-width + $inner-gutter * 2);margin: 0 auto;padding: 0 $inner-gutter;}
+.common-inner {position: relative;width: calc($inner-width + $inner-gutter * 2);height: inherit;margin: 0 auto;padding: 0 $inner-gutter;}
