--- a/src/style/abstract/_variable.scss
+++ b/src/style/abstract/_variable.scss
@@ -1,30 +1,34 @@
 @charset "utf-8";
 
 /* color */
-$primary100: #E2F6FB !default;
-$primary200: #C6EBF7 !default;
-$primary300: #A3D3E9 !default;
-$primary400: #84B6D3 !default;
-$primary500: #5C90B6 !default;
-$primary600: #43719C !default;
-$primary700: #2E5583 !default;
-$primary800: #1D3C69 !default;
-$primary900: #112A57 !default;
+$primary100: #CDDCFC !default;
+$primary200: #9DB7FA !default;
+$primary300: #6A8DF2 !default;
+$primary400: #446BE5 !default;
+$primary500: #0E39D5 !default;
+$primary600: #0A2BB7 !default;
+$primary700: #072099 !default;
+$primary800: #04167B !default;
+$primary900: #020F66 !default;
 $primary: $primary500 !default;
 
-$grey100: #F9FAFB !default;
-$grey200: #F4F6F8 !default;
-$grey300: #DFE3E8 !default;
-$grey400: #C4CDD5 !default;
-$grey500: #919EAB !default;
-$grey600: #637381 !default;
-$grey700: #454F5B !default;
-$grey800: #212B36 !default;
-$grey900: #161C24 !default;
-$grey: $grey700 !default;
+$grey100: #F1F3F9 !default;
+$grey200: #E3E7F4 !default;
+$grey300: #C7CDDE !default;
+$grey400: #A5ABBE !default;
+$grey500: #7A7F93 !default;
+$grey600: #595F7E !default;
+$grey700: #3D4469 !default;
+$grey800: #262D55 !default;
+$grey900: #171C46 !default;
+$grey: $grey500 !default;
 
 $black: #333 !default;
 $white: #fff !default;
+
+$main-table-border-color: $black !default;
+$main-table-text-color1: $black !default;
+$main-table-text-color2: $primary !default;
 
 /* font */
 $font-system: -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif !default;
@@ -56,13 +60,14 @@ $zindex2: 8888888 !default; // 헤더
 $zindex3: 7777777 !default; // 그 외
 
 /* radius */
-$radius1: 8px !default;
-$radius2: 10px !default;
+$radius1: 4px !default;
+$radius2: 8px !default;
 
 /* layout */
 $inner-width: 1300px !default;
 $inner-gutter: 20px !default;
 $header-height: 200px !default;
+$main-table-gutter: 10px !default;
 
 /* speed */
 $transition-speed: 0.2s !default;
